# pyta2

./: .gitignore  AGENTS.md  GEMINI.md  README.md  pyproject.toml  setup.py
designs/inspiration/: README.md
examples/: 01_numpy_deque_usage.py  02_deque_table_usage.py  03_ma_comparison.py  demo_ma.py  plot_demo.py
pyta2/: __init__.py  logger.py
pyta2/base/: __init__.py  indicator.py  schema.py  utils.py
pyta2/cycle/: aroon.py  dif.py  lag.py  psy.py  tti.py  tti1.py
pyta2/momentum/: __init__.py  _batch.py  _rolling.py  bias.py  cci.py  kdj.py  macd.py  roc.py  tsi.py  uo.py  vel.py  wr.py
pyta2/perf/: README.md  __init__.py  _batch.py  _rolling.py  order_volume.py  position_size.py
pyta2/relation/: __init__.py  _batch_.py  _rolling_.py  corr.py  cross.py  d_area.py
pyta2/stats/: README.md  __init__.py  _batch_.py  _rolling_.py  _utils.py  er.py  estd.py  highlow.py  linear_regress.py  misc.py  nukit.py  numeric.py  path.py  rank_at.py  rank_range_mean.py  siegel_regress.py  sorted_at.py  stats.py  temp.py  ter.py  tpi1.py  utils.py  vor.py  zscore.py
pyta2/structure/: __init__.py  _batch.py  _rolling.py  base.py
pyta2/tests/: test_new_indicators.py
pyta2/trend/: __init__.py  _batch.py  _rolling.py  bbi.py  bop.py  dmi.py  para_sar.py
pyta2/utils/: vector.py
pyta2/volume/: __init__.py  _batch.py  _rolling.py  cmf.py  emv.py  mfi.py  obv.py  vpt.py  vwap.py
test/utils/: config.py  test_deque_table.py
tests/: test_batch_indicators.py  test_ma_indicators.py  test_new_indicators.py  test_new_indicators_smoke.py
tests/structure/: plot_boll.py  (+2 more)
(+106 files in other folders)
